# dl-comet-tail-liver-us

./: .gitignore  README.md  pyproject.toml
configs/: dinov3_baseline.toml  resnet18_baseline.toml
scripts/: slurm_train.sbatch  smoke_local.ps1  train_local.ps1
src/lpac_project/: data.py  engine.py  evaluate.py  metrics.py  train.py  utils.py
src/lpac_project/models/: dinov3.py  registry.py  resnet.py
tests/: inspect_dataset.ipynb  test_data.py  test_models.py  test_smoke_train.py
